--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,16 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					 <!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
+					
+				</configuration>
+			</plugin>
+			
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                     <!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
                     <argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
@@ -89,8 +98,9 @@
                     </suiteXmlFiles>
                     <!--定义maven运行测试生成的报表路径 -->
                     <reportsDirectory>./result/test-report</reportsDirectory>
-				</configuration>
-			</plugin>
+                </configuration>
+            </plugin>
+			
 		</plugins>
 	</build>
 </project>
