--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     <version>LATEST</version>
 
 		</dependency>
+		   <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+            <scope>provided</scope>
+        </dependency>
 		
 
 	</dependencies>
